data/derived/sp14/progs/unify/prog4347.ml.out
Characters 62-63:
  | VarX           -> ""::e
                          ^
Error: This expression has type expr but an expression was expected of type
         string list
